added heart html css js * code

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -4,7 +4,7 @@
 @font-face {
     font-family: "Booter - Zero Zero";
     src: url("Fonts/Booter - Zero Zero.woff") format("woff"),
-         url("Fonts/Booter - Zero Zero.woff2") format("woff2");
+        url("Fonts/Booter - Zero Zero.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
 }
@@ -15,7 +15,8 @@
     color: #777;
 }
 
-html, body {
+html,
+body {
     margin: 0;
     padding: 0;
     min-height: 100%;
@@ -81,6 +82,7 @@ html, body {
     margin: 0 auto;
     padding: 0 1.5em;
 }
+
 .section-header {
     font-family: "Metal Mania";
     font-weight: normal;
@@ -339,18 +341,23 @@ html, body {
     font-size: 1.75em;
 }
 
-.heart {
+
+
+.btns {
+
+    text-align: center;
+    vertical-align: middle;
+    padding: .67em .67em;
     cursor: pointer;
-    width: 16px;
-    height: 16px;
-    max-width: 100%;
+    border: none;
+    color: grey;
+    background: transparent;
+    outline: none;
+    font-size: 20px;
+    display: flex;
 
-    background: url("/src/img/heart-png.png") ;
-  }
-  .heart.liked {
-    background: url("/src/img/heartlike.png") ;
-  }
+}
 
-  
-
-  
+.btns i:hover {
+    cursor: pointer;
+}
